Remove collapsing margins on advisor profiles on our team page (needed to fix layout bug on IE).

--- a/themes/catalyst/sass/_our-team.scss
+++ b/themes/catalyst/sass/_our-team.scss
@@ -334,13 +334,8 @@
     }
     .profile-preview {
         width: 100%;
-        margin: 1.25rem auto;
-        position: relative;
         @include flex-column(nowrap, center, center);
         @include media(900px) {
-            width: 30%;
-        }
-        @include media(1350px) {
             width: 20%;
         }
         .job-title {
